<resources>
    <string name="app_name">Wana</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pending">Pending</string>
    <string name="title_Reports">Reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="my_report_city_and_country">%1s, %2s</string>
    <string name="view_my_report_positive_button">Edit</string>
    <string name="view_my_report_negative_button">Delete</string>
    <string name="reports_database_node">reports</string>
    <string name="reporters_database_node">reporters</string>
    <string name="view_report_date">Reported on: %1s</string>
    <string name="report_city_and_country">%1s, %2s</string>
    <string name="authority_name_and_location_for_view">%1s\n%2s</string>
    <string name="view_general_lost_report_action_button">Found it</string>
    <string name="view_general_found_report_action_button">Claim it</string>
    <string name="view_general_report_negative_button">Cancel</string>
    <string name="claims">Claims</string>
    <string name="submissions">Submissions</string>
    <string name="collections">Collections</string>
    <string name="pending_claim_time_text">Item was found %1s</string>
    <string name="pending_submission_time_text">You found this item %1s</string>
    <string name="pending_collection_time_text">You claimed this item %1s</string>
    <string name="button_collected">Collected</string>
    <string name="no_pending_items">No items to %1s</string>
    <string name="claims_description">Your lost items have been found, Claim them</string>
    <string name="submissions_description">Submit these items you found to nearest police</string>
    <string name="collections_description">Collect these items you claimed in 7 days\n</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="home_no_reports">No Reports!!\nYour Reports will be shown here</string>
    <string name="enter_all_fields">enter all fields</string>
    <string name="take_photo_or_select_image">take photo or select image</string>
    <string name="submission_notice_toast">submit item in 3 days to local police</string>
    <string name="default_image_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/wana-lost-and-found.appspot.com/o/report_images%2Freporters%2Fno_image.jpg?alt=media&token=5c0f116c-5304-4622-baaa-75bfd318268d]]></string>
    <string name="privacy_policy_url">https://russellappsprivacypolicy.blogspot.com/2023/07/wana-privacy-policy.html</string>
    <string name="add_report">Add Report</string>
    <string name="report_item_you_have">Report item you have...</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="my_reports">My Reports</string>
    <string name="global_reports">Global Reports</string>
    <string name="pending_actions">Pending actions</string>
</resources>