<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wanalnf.wana_lost_and_found.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addReportFragment"
            app:destination="@id/addReportFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.wanalnf.wana_lost_and_found.ui.reports.ReportsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_pending"
        android:name="com.wanalnf.wana_lost_and_found.ui.pendings.PendingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_pending" />
    <fragment
        android:id="@+id/addReportFragment"
        android:name="com.wanalnf.wana_lost_and_found.ui.add_view_report.ActivityAddReport"
        android:label="fragment_add_report"
        tools:layout="@layout/fragment_add_report" />
</navigation>